@@ -555,8 +555,6 @@ public class Blackboard extends Subscriber
   }
 
   protected Persistence createPersistence(ClusterServesLogicProvider cluster) {
-    if (System.getProperty("org.cougaar.core.persistence.enable", "false").equals("false"))
-      return null;		// Disable persistence for now
     try {
       Persistence result = BasePersistence.find(cluster, myServiceBroker);
       if (System.getProperty("org.cougaar.core.persistence.disableWrite", "false").equals("true")) {
